# Vaybuklek

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
docs/: AUDIO_TASK.md  user-journey-map.drawio
n8n/: dirizher-orchestration.json
src/dirizher/: __init__.py  chat_history.py  config.py  container.py  logging_setup.py  main.py  repository.py  state_store.py
src/dirizher/api/: __init__.py  server.py
src/dirizher/audio/: __init__.py  decode.py  embeddings.py  groq_transcriber.py  pipeline.py  recorder.py  speakers.py  transcriber.py
src/dirizher/bot/: __init__.py  app.py  callback_data.py  confirmation.py  flow.py  keyboards.py  states.py  task_commands.py  text.py
src/dirizher/cli/: __init__.py  doctor.py  meeting.py  simulator.py
src/dirizher/domain/: __init__.py  enums.py  models.py
src/dirizher/integrations/: __init__.py  yougile.py
src/dirizher/llm/: __init__.py  base.py  extractor.py  gigachat_provider.py  groq_provider.py  mock_provider.py  parsing.py  prefilter.py  prompt.py
src/dirizher/memory/: __init__.py  project_snapshot.py  vector_store.py
src/dirizher/scheduler/: __init__.py  jobs.py  scheduler.py
src/dirizher/services/: __init__.py  gamification.py  meeting.py  reconciliation.py  (+1 more)
tests/: conftest.py  test_antifanout.py  test_board_sync.py  test_extraction.py  test_followups.py  test_gamification.py  test_jobs_gamification.py  test_meeting_speakers.py  test_persistence_assignees.py  test_prefilter.py  test_reconciliation.py  test_service.py  test_speaker_id.py  test_tasklist.py  test_voice_transcription.py
(+7 files in other folders)
