[project]
name = "dirizher"
version = "0.1.0"
description = "Дирижёр — автономный AI-проджект-менеджер для Telegram-команд и онлайн-встреч"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dateutil>=2.9",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# Векторная память и дедупликация
memory = ["chromadb>=0.5"]
# Боевые LLM-провайдеры
llm = ["groq>=0.9", "gigachat>=0.1.30"]
# Аудио-пайплайн встреч (Этап 3)
audio = [
    "faster-whisper>=1.0",
    "noisereduce>=3.0",
    "pyannote.audio>=3.1",
    "soundfile>=0.12",
    "numpy>=1.26",
    "soundcard>=0.4",  # захват системного звука встреч (WASAPI loopback)
]
# Разработка и тесты
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
dirizher = "dirizher.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
